--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,9 @@
 asgiref==3.4.1
 Django==3.2.5
 django-environ==0.4.5
+pkg_resources==0.0.0
 psycopg2==2.9.1
 pytz==2021.1
+selenium==3.141.0
 sqlparse==0.4.1
+urllib3==1.26.6
